--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,12 +8,15 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/group_2608518"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+
         android:supportsRtl="true"
         android:theme="@style/Theme.BlogApp"
         tools:targetApi="31">
+        <activity
+            android:name=".AddBlogActivity"
+            android:exported="false" />
         <activity
             android:name=".register.LoginActivity"
             android:exported="false" />
@@ -31,9 +34,6 @@
             android:exported="false" />
         <activity
             android:name=".ReadMoreActivity"
-            android:exported="false" />
-        <activity
-            android:name=".AddArticleActivity"
             android:exported="false" />
         <activity
             android:name=".register.SignInAndRegistrationActivity"
